--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -51,7 +51,7 @@
                             </Grid.ColumnDefinitions>
                             <StackPanel HorizontalAlignment="Left" Width="250" Margin="0,28,0,0">
 
-                                <Button x:Name="MainWindow8FGP" Height="30" Content="Generate Printer" Foreground="#FF3D659B"/>
+                                <Button x:Name="MainWindow8FGP" Height="30" Content="Generate Printer" Foreground="#FF3D659B" Click="GeneratePrinterOnClick"/>
                                 <Rectangle Height="15"/>
                                 <Button x:Name="MainWindow9FGP" Height="30" Content="Generate Preview" Foreground="#FF3D659B"/>
                                 <Label x:Name="MainWindow10FGS" Height="30" Content="Icon Resolution" Foreground="#FFD9D3BF"/>
@@ -67,7 +67,7 @@
                                 <Label x:Name="MainWindow11FGS" Height="30" Content="Result blueprint" Foreground="#FFD9D3BF"/>
                                 <Button x:Name="MainWindow12FGP" Content="Copy" Foreground="#FF3D659B" MinWidth="45" MaxWidth="100" HorizontalAlignment="Right"/>
 
-                                <TextBox Grid.Row="1" IsReadOnly="True" IsUndoEnabled="False" Text="test"/>
+                                <TextBox x:Name="ResultTextBox" Grid.Row="1" IsReadOnly="True" IsUndoEnabled="False"/>
                             </Grid>
                         </Grid>
                     </Grid>
