--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,15 +31,24 @@
                         <TabControl Grid.Row="0" TabStripPlacement="Bottom">
                             <TabItem x:Name="MainWindow4FGP" Header="Image" Foreground="#FF3D659B">
                                 <Grid>
-                                    <Label x:Name="MainWindow5FGP" Content="Select a source image on the right side" IsEnabled="False" Foreground="#FF3D659B" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="24"/>
+                                    </Grid.RowDefinitions>
+                                    <Label x:Name="SourceImageReminderLabel" Content="Select a source image on the right side" IsEnabled="False" Foreground="#FF3D659B" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                                     <Image x:Name="UserImagePreview" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
                                 </Grid>
                             </TabItem>
 
                             <TabItem x:Name="MainWindow6FGP" Header="Preview" Foreground="#FF3D659B">
                                 <Grid>
-                                    <Label x:Name="MainWindow7FGP" Content="Click &quot;Generate Preview&quot; below" IsEnabled="False" Foreground="#FF3D659B" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                                    <Image x:Name="PreviewGeneratedImage"/>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="24"/>
+                                    </Grid.RowDefinitions>
+                                    <Label x:Name="PreviewImageReminderLabel" Visibility="Visible" Content="Click &quot;Generate Preview&quot; below" IsEnabled="False" Foreground="#FF3D659B" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                    <Image x:Name="PreviewGeneratedImage" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+                                    <Button x:Name="SavePreviewImageButton" Visibility="Visible" Grid.Row="1" Width="100" Content="Save Image" HorizontalAlignment="Right" Click="SavePreviewImageButtonOnClick"/>
                                 </Grid>
                             </TabItem>
                         </TabControl>
@@ -53,9 +62,9 @@
 
                                 <Button x:Name="MainWindow8FGP" Height="30" Content="Generate Printer" Foreground="#FF3D659B" Click="GeneratePrinterOnClick"/>
                                 <Rectangle Height="15"/>
-                                <Button x:Name="MainWindow9FGP" Height="30" Content="Generate Preview" Foreground="#FF3D659B"/>
+                                <Button x:Name="MainWindow9FGP" Height="30" Content="Generate Preview" Foreground="#FF3D659B" Click="GeneratePreviewOnClick"/>
                                 <Label x:Name="MainWindow10FGS" Height="30" Content="Icon Resolution" Foreground="#FFD9D3BF"/>
-                                <Slider Margin="8,0,8,0" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" Value="64" Minimum="8" Maximum="64" Ticks="8,16,32,64" TickPlacement="BottomRight" IsSnapToTickEnabled="True" />
+                                <Slider x:Name="IconResolutionSlider" Margin="8,0,8,0" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" Value="64" Minimum="8" Maximum="64" Ticks="8,16,32,64" TickPlacement="BottomRight" IsSnapToTickEnabled="True" />
                                 <Label Content="Warning! High Values can generate huge images" Foreground="Red" FontSize="10" Height="25" ToolTip="The Icon resolution will be multiplied by your image size.  If your image is larger than 64x64 I would recommend a lower icon size for the preview image."/>
                             </StackPanel>
                             <Grid Grid.Column="1">
@@ -73,18 +82,18 @@
                     </Grid>
                     <ScrollViewer x:Name="MainWindow13FGP" Grid.Column="2" VerticalScrollBarVisibility="Auto">
                         <StackPanel Margin="8,4,8,4" Background="Transparent">
-                            <TabControl x:Name="MainWindow14BGP" Height="160" Background="#FF3D659B">
+                            <TabControl x:Name="ImageSourceTabControl" Height="160" Background="#FF3D659B">
                                 <TabItem Header="Image" IsSelected="True">
                                     <StackPanel>
                                         <Label x:Name="MainWindow15FGS" Height="30" Content="Image Source Path" Foreground="#FFD9D3BF" ToolTip="The path to the image you want to be converted.  Supports PNG, JPG, EXIF, GIF, BMP and TIFF."/>
                                         <TextBox x:Name="ImageSourcePathTextBox" Height="30"  Text="" TextChanged="ImageSourcePathTextChanged"/>
-                                        <Button x:Name="MainWindow16FGP" Height="30" Width="150" HorizontalAlignment="Right" Content="Browse..." Foreground="#FF3D659B" Click="OnClickImageSourcePath"/>
+                                        <Button x:Name="MainWindow16FGP" Height="30" Width="150" HorizontalAlignment="Right" Content="Browse..." Foreground="#FF3D659B" Click="OnClickImageSourcePath" UseLayoutRounding="True"/>
                                     </StackPanel>
                                 </TabItem>
-                                <TabItem Header="icon" IsSelected="True">
+                                <TabItem Header="icon" IsSelected="False">
                                     <StackPanel>
                                         <Label x:Name="MainWindow17FGS" Height="30" Content="Icon Source Path" Foreground="#FFD9D3BF" ToolTip="The path to the factorio icon file you want converted.  This will automatically format the image to use only the resolution selected below"/>
-                                        <TextBox x:Name="IconImageSourcePathTextBox" Height="30"  Text=""/>
+                                               <TextBox x:Name="IconImageSourcePathTextBox" Height="30"  Text=""/>
                                         <Button x:Name="MainWindow18FGP" Height="30" Width="150" HorizontalAlignment="Right" Content="Browse..." Foreground="#FF3D659B" Click="OnClickIconSourcePath"/>
                                         <Grid >
                                             <Grid.ColumnDefinitions>
@@ -92,7 +101,7 @@
                                                 <ColumnDefinition/>
                                             </Grid.ColumnDefinitions>
                                             <Label x:Name="MainWindow19FGS" Grid.Column="0" Height="30" Content="Icon Resolution" Foreground="#FFD9D3BF" ToolTip="Which resolution from the icons mipmaps you want to use"/>
-                                            <Slider Grid.Column="1" Margin="8,0,8,0" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" Value="64" Minimum="8" Maximum="64" Ticks="8,16,32,64" TickPlacement="BottomRight" IsSnapToTickEnabled="True" />
+                                            <Slider x:Name="IconSourceResolutionSlider" Grid.Column="1" Margin="8,0,8,0" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" Value="64" Minimum="8" Maximum="64" Ticks="8,16,32,64" TickPlacement="BottomRight" IsSnapToTickEnabled="True" />
 
                                         </Grid>
 
@@ -103,11 +112,12 @@
                             <Label x:Name="MainWindow20FGP" Height="30" Content="Factorio Path" Foreground="#FF3D659B" ToolTip="The path to your factorio game folder.  This is only used for finding icon files to make preview images."/>
                             <TextBox x:Name="FactorioPathTextBox" Height="30"  Text="" BorderThickness="1" TextChanged="FactorioPathTextChanged"/>
                             <Button x:Name="MainWindow21FGP" Height="30" Width="150" HorizontalAlignment="Right" Content="Browse..." Foreground="#FF3D659B" Click="OnClickFactorioSourcePath"/>
-                            <Label x:Name="MainWindow22FGP" Height="30" Content="Inserter Type" Foreground="#FF3D659B" ToolTip="inserter type that the printer will use.  you dont usually need anything besides a regular inserter."/>
-                            <ComboBox ToolTip="inserter type that the printer will use.  you dont usually need anything besides a regular inserter.">
-                                <ComboBoxItem Content="Inserter" IsSelected="True"/>
-                                <ComboBoxItem Content="Fast-Inserter"/>
-                                <ComboBoxItem Content="Stack-Inserter"/>
+                            
+                            <Label x:Name="MainWindow29FGP" Height="30" Content="Belt Type" Foreground="#FF3D659B" ToolTip="The tier of belt to be generated in the blueprint.  Affects the belts, splitters, and underground belts."/>
+                            <ComboBox x:Name="BeltTypeComboBox" ToolTip="The tier of belt to be generated in the blueprint.  Affects the belts, splitters, and underground belts.">
+                                <ComboBoxItem Content="Normal" />
+                                <ComboBoxItem Content="Fast"/>
+                                <ComboBoxItem Content="Express" IsSelected="True"/>
                             </ComboBox>
                         </StackPanel>
                     </ScrollViewer>
@@ -350,7 +360,9 @@
                             <Rectangle Grid.Column="1" Fill="#f79a76"/>
                             <Button x:Name="ApplyScheme5" Grid.Column="2" Content="Apply" Click="ApplyScheme5Click"/>
                         </Grid>
-                        
+                        <Button Height="50" x:Name="Pick_Primary_Color_Button" Content="Pick Primary" Click="Pick_Primary_Color_Button_OnClick" />
+                        <Button Height="50" x:Name="Pick_Secondary_Color_Button" Content="Pick Secondary" Click="Pick_Secondary_Color_Button_OnClick" />
+
                     </StackPanel>
                 </Grid>
                             
