--- a/ItemSelectionWidget.xaml
+++ b/ItemSelectionWidget.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TheBluePrinter"
              mc:Ignorable="d" 
-             d:DesignHeight="60" d:DesignWidth="400" Background="#FFD9D3BF" BorderBrush="Red">
+             d:DesignHeight="60" d:DesignWidth="400" Background="#FFD9D3BF" BorderBrush="Red" Height="60" Margin="0,0,0,4">
     
     <Grid>
         
